responsive almost working

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  width: 1024px;
+  height: 794px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-top: 50px;
+  background-image: url("./../images/bgtile.png");
+  /* background-size: 40vh; */
+  background-repeat: repeat-x ;
+  height: 100%;
+
 }
+
+#phone {
+  /* border: 3px solid tomato; */
+  height: 30rem;
+}
+
+#login {
+  display: flex;
+  background-color: #1c5380;
+  padding: 5px;
+}
+#login a {
+  text-decoration: none;
+  color: white;
+  font-weight: bolder;
+}
+
+#main-box {
+  display: flex;
+  border: 5px solid purple;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#information {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* border: 2px solid blue;  */
+  width: 30rem;
+}
+
+#header {
+  display: flex;
+  border: 5px solid rgb(128, 0, 0);
+  justify-content: space-between;
+  align-items: center;
+}
+
+#text-box {
+  background-image: url("./../images/frame.png");
+  background-size: 100%;
+  padding: 0 40px 0 20px;
+  border: 2px solid green;  
+
+}
+
+#stores-btn {
+
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  border: 2px solid violet;
+  margin: 15px;
+}
+
+footer div a {
+  margin: 10px;
+}
+
+.footer-items {
+  margin: 10px;
+}
+
+@media (max-width: 600px) {
+  #main-box {
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+  }
+}
+
+
