--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,152 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	margin: 0;
+	background: url(../images/bgtile.png);
+	background-repeat: repeat-x;
+}
+
+
+/* SECTION 1 STYLE */
+.section1 {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	margin: 150px;
+	margin-bottom: 40px;
+}
+
+.sec1-block-right {
+	width: 500px;	
+}
+
+.sec1-top {
+	width: 500px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	padding-right: 5px;
+}
+
+.sec1-top button {
+	width: 90px;
+	height: 40px;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	background-color: #1c5380;
+	color: white;
+	font-weight: bold;
+}
+
+.sec1-top button a {
+	font-family: 'Roboto', sans-serif;
+}
+
+.sec1-mid {
+	width: 500px;
+	margin-top: 20px;
+	padding: 50px 30px 0px 50px;
+	background-image: url(../images/frame.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	box-sizing: border-box;
+	padding-bottom: 20px;
+}
+
+.sec1-mid h1 {
+	font-family: 'Roboto', sans-serif;
+	color: #06365f;
+	margin: 0px;
+	font-size: 25px;
+}
+
+.sec1-mid p {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	font-stretch: condensed;
+	color: #3b3b3b;
+}
+
+span {
+	font-weight: bold;
+}
+
+.sec1-bottom {
+	width: 500px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+	padding-right: 140px;
+    border-right-width: 50px;
+    margin-right: 50px;
+    margin-left: 40px;
+}
+
+
+/* SECTION 2 STYLE */
+.section2 {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
+.section2 nav {
+	margin-bottom: 70px;
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+}
+
+.section2 nav p {
+	font-family: 'Roboto', sans-serif;
+	font-size: 10px;
+}
+
+.section2 nav ul {
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    padding-right: 30px;
+    width: 600px;
+	font-size: 20px;
+	padding-right: 20px;
+    padding-left: 20px;
+}
+
+.section2 nav ul li {
+	list-style-type: none;
+}
+
+.section2 nav ul li a {
+	text-decoration: none;
+	font-size: 12px;
+	font-weight: 800;
+	color: #1c5380;
+}
+
+.section2 footer {
+	margin-bottom: 70px;
+	color: gray;
+	font-size: 12px;
 }
