--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,119 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/*https://stackoverflow.com/questions/19081355/how-can-apply-multiple-background-color-to-one-div*/
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #06365f 0%, #06365f 35%, white 35%, white 100%);
+  background-repeat: no-repeat;
+  height: 1000px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.div_a {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 100px 100px 50px 100px;
+  height: 90%;
+  width: 70%;
+}
+
+.div_a1 {
+  padding-left: 100px;
+}
+/* HOW TO ADJUST THE SIZE OF AN IMAGE WITHOUT DISTORTING IT */
+.div_a1 img {
+  height: auto;
+  width: auto;
+  min-width: 500px; /*USE min-width and min-height TO INCREASE SIZE and max-width and max-height TO DECREASE SIZE;*/
+  min-height: 500px
+}
+
+.div_a2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-right: 100px;
+}
+
+.div_a21 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 20%;
+  width: 100%;
+  align-items: center;
+  padding: 10px;
+}
+
+
+
+.instagram img {
+  height: auto;
+  width: auto;
+  min-width: 80px;
+  min-height: 80px;
+  background-color: #1c5380;
+}
+
+.login img {
+  height: auto;
+  width: auto;
+  min-width: 10px;
+  min-height: 10px;
+  background-color: #1c5380;
+}
+
+.login button {
+  display: flex;
+  align-items: center;
+  padding: 10px; 
+  background-color: #1c5380;
+}
+
+.div_a22 {
+  height: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column; 
+  justify-content: space-around;
+  background-color: white;
+}
+
+.div_a221 {
+ 
+}
+
+
+.div_a222 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+
+nav {
+  margin: 50px 200px 50px 2 00px;
+  width: 50%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+nav li{
+  display: inline;
+  padding: 10px 15px;
+}
+
+li a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 900;
 }
